package io.hedwig.dp.demos.creation.abstractfactory.uilike;

public interface Button {

  void display();
}


