package io.hedwig.dp.demos.creation.abstractfactory.uilike;

interface ComboBox {

  void display();

}
