package io.hedwig.dp.demos.creation.abstractfactory.uilike;

public interface TextField{
    void display();
}